--- a/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
+++ b/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
@@ -33,7 +33,15 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'zygosity': 'hom', 'genes': 'all', 'member': 'all', 'platform': 'cgi', 'chr': '8', 'sample_id': 'all'}\n"
+       ]
+      }
+     ],
      "input": [
       "#enter your user args as a comma-separated list with no spaces, or as 'all'\n",
       "args = {'member':'all', # this option not functional until Joe adds member column to variant tables\n",
@@ -45,7 +53,7 @@
       "        }"
      ],
      "language": "python",
-     "prompt_number": 37
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -121,7 +129,7 @@
       "      query_args.replace(\"AND\", \"\\n AND\")"
      ],
      "language": "python",
-     "prompt_number": 38
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -188,7 +196,7 @@
       "print 'The following query was run on impala:' + '\\n' + query"
      ],
      "language": "python",
-     "prompt_number": 39
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -209,7 +217,15 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Query complete.\nThere were 77 variants found. Here's a preview:\n  chr      start       stop ref alt1 alt2 zygosity vartype alt1_qual  \\\n0   8   19813529   19813530   A    G    G      hom     snp    VQHIGH   \n1   8  143994266  143994267   A    G    G      hom     snp    VQHIGH   \n2   8  143994266  143994267   A    G    G      hom     snp    VQHIGH   \n3   8   67091182   67091183   G    T    T      hom     snp    VQHIGH   \n4   8   21976710   21976711   T    C    C      hom     snp    VQHIGH   \n\n  alt2_qual  totalreadcount  sample_id        rsid      rspos      geneinfo  \\\n0    VQHIGH              68  101-264-M       rs268   19813529      LPL:4023   \n1    VQHIGH              29  101-589-M  rs61757294  143994266  CYP11B2:1585   \n2    VQHIGH              29  101-589-M  rs61757294  143994266  CYP11B2:1585   \n3    VQHIGH              54  101-180-M  rs12721510   67091182      CRH:1392   \n4    VQHIGH              22  101-013-F   rs7014851   21976710      HR:55806   \n\n   dbsnp_build                         hgvs clin_sig  \n0           36   NC_000008.10:g.19813529A>G        5  \n1          129  NC_000008.10:g.143994266A>G        5  \n2          129  NC_000008.10:g.143994266A>G        5  \n3          127   NC_000008.10:g.67091182G>T        5  \n4          116   NC_000008.10:g.21976710T>C        5  \n\n Results saved to current working directory as clinvar_results_20150629.csv\n"
+       ]
+      }
+     ],
      "input": [
       "#################\n",
       "# load modules  #\n",
@@ -228,28 +244,14 @@
       "#########################\n",
       "# Run Query on Impala ##\n",
       "#########################\n",
+      "print \"Running query on impala... \\n\"\n",
       "cur.execute(query)\n",
       "\n",
       "#store results as pandas data frame\n",
-      "query_df = as_pandas(cur)"
-     ],
-     "language": "python",
-     "prompt_number": 33
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "There were 77 variants found. Here's a preview:\n  chr      start       stop ref alt1 alt2 zygosity vartype alt1_qual  \\\n0   8   19813529   19813530   A    G    G      hom     snp    VQHIGH   \n1   8  143994266  143994267   A    G    G      hom     snp    VQHIGH   \n2   8  143994266  143994267   A    G    G      hom     snp    VQHIGH   \n3   8   21976710   21976711   T    C    C      hom     snp    VQHIGH   \n4   8   67091182   67091183   G    T    T      hom     snp    VQHIGH   \n\n  alt2_qual  totalreadcount  sample_id        rsid      rspos      geneinfo  \\\n0    VQHIGH              68  101-264-M       rs268   19813529      LPL:4023   \n1    VQHIGH              29  101-589-M  rs61757294  143994266  CYP11B2:1585   \n2    VQHIGH              29  101-589-M  rs61757294  143994266  CYP11B2:1585   \n3    VQHIGH              22  101-013-F   rs7014851   21976710      HR:55806   \n4    VQHIGH              54  101-180-M  rs12721510   67091182      CRH:1392   \n\n   dbsnp_build                         hgvs clin_sig  \n0           36   NC_000008.10:g.19813529A>G        5  \n1          129  NC_000008.10:g.143994266A>G        5  \n2          129  NC_000008.10:g.143994266A>G        5  \n3          116   NC_000008.10:g.21976710T>C        5  \n4          127   NC_000008.10:g.67091182G>T        5  \n\n Results saved to current working directory as clinvar_results_20150623.csv\n"
-       ]
-      }
-     ],
-     "input": [
+      "query_df = as_pandas(cur)\n",
+      "\n",
+      "print \"Query complete.  \\n\"\n",
+      "\n",
       "if len(query_df) > 0: \n",
       "    print \"There were \" + str(len(query_df)) + \" variants found. Here's a preview:\"\n",
       "    print query_df.head(5)\n",
@@ -258,10 +260,14 @@
       "    query_df.to_csv(csv_name, header=True, encoding='utf-8', index=False)\n",
       "    print \"\\n Results saved to current working directory as \" + csv_name\n",
       "else: \n",
-      "    print \"No results found.\""
+      "    print \"No results found.\"\n",
+      "    \n",
+      "#close all the things\n",
+      "cur.close()\n",
+      "sys.exit()"
      ],
      "language": "python",
-     "prompt_number": 54
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -279,28 +285,8 @@
       "- member id added to variant tables\n",
       "- genotype info added to illumina variants table\n",
       "- masked zygosity column added to illumina variants table\n",
-      "- rewrite as needed for changes listed above\n",
-      "- figure out how to export and distribute this"
+      "- rewrite as needed for changes listed above"
      ]
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "'python' is not recognized as an internal or external command,\noperable program or batch file.\n"
-       ]
-      }
-     ],
-     "input": [
-      "!ipython nbconvert clinvar_pathogenic.ipynb"
-     ],
-     "language": "python",
-     "prompt_number": 4
     }
    ]
   }
