updated clinvar query

--- a/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
+++ b/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
@@ -38,22 +38,24 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{'zygosity': 'hom', 'genes': 'all', 'member': 'all', 'platform': 'cgi', 'chr': '8', 'sample_id': 'all'}\n"
+        "{'zygosity': 'hom', 'genes': 'all', 'member': 'M,F', 'platform': 'cgi', 'chr': '8', 'sample_id': 'all'}\n"
        ]
       }
      ],
      "input": [
       "#enter your user args as a comma-separated list with no spaces, or as 'all'\n",
-      "args = {'member':'all', # this option not functional until Joe adds member column to variant tables\n",
+      "args = {'member':'M,F', # this option not functional until Joe adds member column to variant tables\n",
       "        'genes': 'all', \n",
       "        'sample_id':'all', \n",
       "        'chr':'8', \n",
       "        'zygosity':'hom', # this option not functional in illumina until Joe adds column\n",
       "        'platform':'cgi'\n",
-      "        }"
+      "        }\n",
+      "\n",
+      "print args"
      ],
      "language": "python",
-     "prompt_number": 1
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -143,7 +145,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "An impala query was created specific to the platform specified above. The variant table was joined with the ClinVar table, returning variants where a ClinVar variant with clinical significance of 4 or 5 fell on the same chromosome, between the start and stop position of the variant. "
+      "An impala query was created specific to the platform specified above. \n",
+      "\n",
+      "The variant table was joined with the ClinVar table, returning variants where a ClinVar variant with clinical significance of 4 or 5, but never marked as 2 or 3, fell on the genomic position as the variant, with matching reference and alternate alleles. \n",
+      "\n",
+      "For the cgi platform:\n",
+      "- If the clinvar varaint matched both the allele1seq and allele2seq alt alleles, the variant was marked as hom_alt\n",
+      "- If the clinvar variant matched either the allele1seq or the allele2seq alt alleles, but not both, the variant was marked as het \n",
+      "\n",
+      "For the illumina platform: \n",
+      "- If the zygosity was 1/1 and the clinvar variant matched both alt alleles, the variant was marked as hom_alt. \n",
+      "- If the zygosity was marked as 0/1 and the clinvar variant matched the alt allele, the variant was marked as het. "
      ]
     },
     {
@@ -196,7 +208,7 @@
       "print 'The following query was run on impala:' + '\\n' + query"
      ],
      "language": "python",
-     "prompt_number": 3
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -255,19 +267,54 @@
       "if len(query_df) > 0: \n",
       "    print \"There were \" + str(len(query_df)) + \" variants found. Here's a preview:\"\n",
       "    print query_df.head(5)\n",
-      "    #save to csv\n",
+      "else: \n",
+      "    print \"No results found.\""
+     ],
+     "language": "python",
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 3,
+     "source": [
+      "Analyzing Mode of Inheritence"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "#save to csv\n",
       "    csv_name = \"clinvar_results_\" + time.strftime(\"%Y%m%d\") + \".csv\"\n",
       "    query_df.to_csv(csv_name, header=True, encoding='utf-8', index=False)\n",
-      "    print \"\\n Results saved to current working directory as \" + csv_name\n",
-      "else: \n",
-      "    print \"No results found.\"\n",
-      "    \n",
+      "    print \"\\n Results saved to current working directory as \" + csv_name"
+     ],
+     "language": "python"
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
       "#close all the things\n",
       "cur.close()\n",
       "sys.exit()"
      ],
-     "language": "python",
-     "prompt_number": 7
+     "language": "python"
     },
     {
      "cell_type": "heading",
