--- a/rare_variants/variant_analyzer.ipynb
+++ b/rare_variants/variant_analyzer.ipynb
@@ -246,7 +246,16 @@
       "        # if the newborn is hom_alt\n",
       "        elif (len(group[(group['member'] == 'NB') & (group['gt'] == '1/1')]) > 0):\n",
       "            group['var_type'] = \"hom_alt\"\n",
-      "            hom_alt.append(group)"
+      "            hom_alt.append(group)\n",
+      "if len(hom_alt) > 0:\n",
+      "    print \"{0:s} Homozygous alt variants found. \\n\".format(len(hom_alt))\n",
+      "else:\n",
+      "    print \"No homozygous alt variants found.  \\n\"\n",
+      "    \n",
+      "if len(hom_ref) > 0:\n",
+      "    print \"{0:s} Homozygous ref variants found. \\n\".format(len(hom_ref))\n",
+      "else:\n",
+      "    print \"No homozygous ref variants found.  \\n\""
      ],
      "language": "python"
     },
@@ -274,7 +283,12 @@
       "        # if there are matching variants from both parents, mark as comp-het\n",
       "        if (len(all_vars[(all_vars['member'] == 'F')]) > 0) and (len(all_vars[(all_vars['member'] == 'M')]) > 0):\n",
       "            all_vars['var_type'] = \"comp_het\"\n",
-      "            comp_het.append(all_vars)"
+      "            comp_het.append(all_vars)\n",
+      "            \n",
+      "if len(comp_het) > 0:\n",
+      "    print \"{0:s} Compound het variants found. \\n\".format(len(comp_het))\n",
+      "else:\n",
+      "    print \"No compound het variants found.  \\n\""
      ],
      "language": "python"
     },
@@ -332,7 +346,17 @@
       "                mie.append(group)\n",
       "            else:\n",
       "                group['var_type'] = \"missing_parent\"\n",
-      "                missing.append(group)"
+      "                missing.append(group)\n",
+      "                \n",
+      "if len(mie) > 0:\n",
+      "    print \"{0:s} MIE variants found. \\n\".format(len(mie))\n",
+      "else:\n",
+      "    print \"No MIE variants found.  \\n\"\n",
+      "    \n",
+      "if len(missing) > 0:\n",
+      "    print \"{0:s} variants found with missing parent info. \\n\".format(len(hom_alt))\n",
+      "else:\n",
+      "    print \"No variants found with missing parent info.  \\n\""
      ],
      "language": "python"
     },
@@ -342,7 +366,21 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      ""
+      "###########################\n",
+      "# merge and save results ##\n",
+      "###########################\n",
+      "print \"Saving results to current working directory....\"\n",
+      "\n",
+      "#create list of groupby result lists and merge\n",
+      "groups = hom_alt + hom_ref + comp_het + mie + missing\n",
+      "results = pd.concat(groups, axis=0, join='outer')\n",
+      "\n",
+      "#save to csv\n",
+      "results.to_csv('rare_variant_results.csv', header=True, encoding='utf-8')\n",
+      "\n",
+      "#close all the things\n",
+      "cur.close()\n",
+      "sys.exit()"
      ],
      "language": "python"
     }
