--- a/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
+++ b/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
@@ -24,7 +24,7 @@
      "source": [
       "The ClinVar database was used to locate potentially pathogenic variants. \n",
       "\n",
-      "Clinvar variants whose clinical significance has been marked as 4 or 5, but never 2 or 3, were mapped against the variants of interest by chromosome, start and stop position.If a clinvar variant fell within the start and stop site of a variant of interest, that variant was retained and output for for further analysis.   \n",
+      "Clinvar variants whose clinical significance has been marked as 4 or 5, but never 2 or 3, were mapped against the variants of interest by chromosome, position, reference allele and alterneate allele.\n",
       "\n",
       "The following parameters were used for this study: \n"
      ]
@@ -33,29 +33,19 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "{'zygosity': 'hom', 'genes': 'all', 'member': 'M,F', 'platform': 'cgi', 'chr': '8', 'sample_id': 'all'}\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "#enter your user args as a comma-separated list with no spaces, or as 'all'\n",
-      "args = {'member':'M,F', # this option not functional until Joe adds member column to variant tables\n",
+      "#enter values that work with LIKE statement\n",
+      "args = {'sample_id':'%M,%F,%NB', \n",
       "        'genes': 'all', \n",
-      "        'sample_id':'all', \n",
-      "        'chr':'8', \n",
-      "        'zygosity':'hom', # this option not functional in illumina until Joe adds column\n",
-      "        'platform':'cgi'\n",
-      "        }\n",
-      "\n",
-      "print args"
+      "        'chr': 'all', \n",
+      "        'gt':'1/1,0/1', # enter as 'gt' for illumina and 'zygosity' for cgi\n",
+      "        'platform':'illumina'\n",
+      "        }"
      ],
      "language": "python",
-     "prompt_number": 11
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -89,7 +79,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The following user arguments will be used to query impala: \n\n AND vcf.zygosity = 'hom' \n AND vcf.chr = '8'\n"
+        "The following user arguments will be used to query impala: \n\n AND vcf.gt LIKE ('1/1') OR vcf.gt LIKE ('0/1')  \n AND vcf.sample_id LIKE ('%M') OR vcf.sample_id LIKE ('%F') OR vcf.sample_id LIKE ('%NB') \n"
        ]
       }
      ],
@@ -101,7 +91,8 @@
       "def process_args(arg, val):\n",
       "    # if arg is not 'all' and there are more than one argument\n",
       "    if val != 'all' and (',' in val):\n",
-      "        conditionals.append(\" vcf.{0} IN ('\".format(arg) + \"','\".join(val.split(',')) + \"')\")\n",
+      "        conditionals.append(\" vcf.{0} LIKE ('\".format(arg) + \"') OR vcf.{0} LIKE ('\".join(val.split(',')).format(\n",
+      "                arg) +  \"') \")\n",
       "    # if arg is not 'all' but there is only one arg\n",
       "    elif val!= 'all' and  (',' not in val):\n",
       "        conditionals.append(\" vcf.{0} = '{1}'\".format(arg,val))\n",
@@ -131,7 +122,7 @@
       "      query_args.replace(\"AND\", \"\\n AND\")"
      ],
      "language": "python",
-     "prompt_number": 2
+     "prompt_number": 30
     },
     {
      "cell_type": "heading",
@@ -145,17 +136,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "An impala query was created specific to the platform specified above. \n",
-      "\n",
-      "The variant table was joined with the ClinVar table, returning variants where a ClinVar variant with clinical significance of 4 or 5, but never marked as 2 or 3, fell on the genomic position as the variant, with matching reference and alternate alleles. \n",
-      "\n",
-      "For the cgi platform:\n",
-      "- If the clinvar varaint matched both the allele1seq and allele2seq alt alleles, the variant was marked as hom_alt\n",
-      "- If the clinvar variant matched either the allele1seq or the allele2seq alt alleles, but not both, the variant was marked as het \n",
-      "\n",
-      "For the illumina platform: \n",
-      "- If the zygosity was 1/1 and the clinvar variant matched both alt alleles, the variant was marked as hom_alt. \n",
-      "- If the zygosity was marked as 0/1 and the clinvar variant matched the alt allele, the variant was marked as het. "
+      "An impala query was created specific to the platform specified above. The variant table was joined with the ClinVar table, returning variants where a ClinVar variant with clinical significance of 4 or 5 fell on the same chromosome, between the start and stop position of the variant. "
      ]
     },
     {
@@ -167,48 +148,63 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The following query was run on impala:\n\nSELECT vcf.chr, vcf.start, vcf.stop, vcf.ref, vcf.allele1seq as alt1, vcf.allele2seq as alt2, vcf.zygosity, vcf.vartype,\nvcf.allele1varquality as alt1_qual, vcf.allele2varquality as alt2_qual, vcf.totalreadcount, vcf.sample_id,\nclin.rsid, clin.rspos, clin.geneinfo, clin.dbsnpbuildid as dbsnp_build, clin.hgvs, clin.clin_sig\n    FROM public_hg19.clinvar_grch37 AS clin\n    JOIN p7_platform.wgs_comgen_variant AS vcf\n    ON clin.chr = vcf.chr\n    AND clin.ref = vcf.ref\n    AND clin.pos BETWEEN vcf.start and vcf.stop\n    AND (clin.alt = vcf.allele1seq or clin.alt = vcf.allele2seq)\nWHERE ((FIND_IN_SET('4', clin.clin_sig) > 0) OR (FIND_IN_SET('5', clin.clin_sig)>0)\n    AND\n       (FIND_IN_SET('3', clin.clin_sig)=0 AND FIND_IN_SET('2', clin.clin_sig)=0))\n\n AND vcf.zygosity = 'hom' \n AND vcf.chr = '8'\n             \n"
+        "The following query was run on impala:\n\nWITH clin as (\n  SELECT vcf.sample_id, vcf.chr, vcf.pos, vcf.id as rsID, vcf.ref, vcf.alt, vcf.qual, vcf.filter,\n  vcf.gt, clin.gene, clin.accession, clin.clin_acc, clin.clin_sig, clin.clin_hgvs, clin.clin_dbn\n  FROM p7_platform.brady_variant as vcf, public_hg19.clinvar AS clin\n  WHERE (clin_sig NOT REGEXP '3|2[^5]|2$'\n  AND clin_sig REGEXP '4|[^25]5|^5')\n  AND clin.chrom = vcf.chr\n  AND clin.ref = vcf.ref\n  AND clin.alt = vcf.alt\n  AND clin.pos = vcf.pos\n  \n AND vcf.gt LIKE ('1/1') OR vcf.gt LIKE ('0/1')  \n AND vcf.sample_id LIKE ('%M') OR vcf.sample_id LIKE ('%F') OR vcf.sample_id LIKE ('%NB') \n  )\n  \nSELECT clin.*, (kav.alle_freq * 100) as kav_freq\n   FROM clin\n   LEFT JOIN public_hg19.kaviar kav\n   ON clin.rsid = kav.id\n   AND clin.chr = kav.chromosome\n   AND clin.pos = kav.pos\n   AND clin.ref = kav.ref\n   AND clin.alt = kav.alt\n\n"
        ]
       }
      ],
      "input": [
       "if args['platform'] == 'cgi':\n",
       "    query = \"\"\"\n",
-      "SELECT vcf.chr, vcf.start, vcf.stop, vcf.ref, vcf.allele1seq as alt1, vcf.allele2seq as alt2, vcf.zygosity, vcf.vartype,\n",
-      "vcf.allele1varquality as alt1_qual, vcf.allele2varquality as alt2_qual, vcf.totalreadcount, vcf.sample_id,\n",
-      "clin.rsid, clin.rspos, clin.geneinfo, clin.dbsnpbuildid as dbsnp_build, clin.hgvs, clin.clin_sig\n",
-      "    FROM public_hg19.clinvar_grch37 AS clin\n",
-      "    JOIN p7_platform.wgs_comgen_variant AS vcf\n",
-      "    ON clin.chr = vcf.chr\n",
-      "    AND clin.ref = vcf.ref\n",
-      "    AND clin.pos BETWEEN vcf.start and vcf.stop\n",
-      "    AND (clin.alt = vcf.allele1seq or clin.alt = vcf.allele2seq)\n",
-      "WHERE ((FIND_IN_SET('4', clin.clin_sig) > 0) OR (FIND_IN_SET('5', clin.clin_sig)>0)\n",
-      "    AND\n",
-      "       (FIND_IN_SET('3', clin.clin_sig)=0 AND FIND_IN_SET('2', clin.clin_sig)=0))\n",
-      "{0:s}\n",
-      "             \"\"\".format(query_args.replace(\"AND\", \"\\n AND\"))\n",
+      "SELECT vcf.sample_id, vcf.chr, vcf.start, vcf.stop, vcf.ref, vcf.allele1seq, vcf.allele2seq,\n",
+      "vcf.allele1varquality, vcf.allele2varquality, vcf.totalreadcount, vcf.zygosity, clin.id AS rsid,\n",
+      "clin.gene, clin.accession, clin.clin_sig, clin.clin_hgvs, clin.clin_dbn, \n",
+      "CASE \n",
+      "  WHEN (clin.alt = cgi.allele1seq AND clin.alt = allele2seq) THEN 'hom_alt'\n",
+      "  WHEN (clin.alt <> cgi.allele1seq AND clin.alt <> allele2seq) THEN 'hom_ref'\n",
+      "  WHEN (clin.alt <> cgi.allele1seq AND clin.alt = allele2seq) THEN 'het'\n",
+      "  WHEN (clin.alt = cgi.allele1seq AND clin.alt <> allele2seq) THEN 'het'\n",
+      "  WHEN (clin.alt = cgi.allele1seq AND clin.alt = allele2seq) THEN 'hom_ref'\n",
+      "  ELSE 'other'\n",
+      "  END as alt_call     \n",
+      "FROM p7_platform.wgs_comgen_variant AS vcf, public_hg19.clinvar AS clin\n",
+      "WHERE (clin_sig NOT REGEXP '3|2[^5]|2$'\n",
+      "AND clin_sig REGEXP '4|[^25]5|^5')\n",
+      "{0}\n",
+      "AND clin.chrom = vcf.chr\n",
+      "AND clin.ref = vcf.ref\n",
+      "AND (clin.pos BETWEEN vcf.start and vcf.stop)\n",
+      "AND (clin.alt = vcf.allele1seq OR clin.alt = vcf.allele2seq) \"\"\".format(query_args.replace(\"AND\", \"\\n AND\"))\n",
       "elif args['platform'] == 'illumina':\n",
       "    query = \"\"\"\n",
-      "SELECT vcf.chr, vcf.pos, vcf.ref, vcf.alt, vcf.qual, vcf.filter, vcf.gt, vcf.zygosity, vcf.sample_id,\n",
-      "clin.rsid, clin.rspos, clin.geneinfo, clin.dbsnpbuildid as dbsnp_build, clin.hgvs, clin.clin_sig\n",
-      " FROM public_hg19.clinvar_grch37 AS clin\n",
-      " JOIN p7_platform.wgs_illumina_variant AS vcf\n",
-      "    ON clin.chr = vcf.chr\n",
-      "    AND clin.ref = vcf.ref\n",
-      "    AND clin.pos = vcf.pos\n",
-      "    AND clin.alt = vcf.alt\n",
-      "WHERE ((FIND_IN_SET('4', clin.clin_sig) > 0) OR (FIND_IN_SET('5', clin.clin_sig)>0)\n",
-      "    AND\n",
-      "       (FIND_IN_SET('3', clin.clin_sig)=0 AND FIND_IN_SET('2', clin.clin_sig)=0))\n",
-      "{0:s}\n",
-      "            \"\"\".format(query_args.replace(\"AND\", \"\\n AND\"))\n",
+      "WITH clin as (\n",
+      "  SELECT vcf.sample_id, vcf.chr, vcf.pos, vcf.id as rsID, vcf.ref, vcf.alt, vcf.qual, vcf.filter,\n",
+      "  vcf.gt, clin.gene, clin.accession, clin.clin_acc, clin.clin_sig, clin.clin_hgvs, clin.clin_dbn\n",
+      "  FROM p7_platform.brady_variant as vcf, public_hg19.clinvar AS clin\n",
+      "  WHERE (clin_sig NOT REGEXP '3|2[^5]|2$'\n",
+      "  AND clin_sig REGEXP '4|[^25]5|^5')\n",
+      "  AND clin.chrom = vcf.chr\n",
+      "  AND clin.ref = vcf.ref\n",
+      "  AND clin.alt = vcf.alt\n",
+      "  AND clin.pos = vcf.pos\n",
+      "  {0}\n",
+      "  )\n",
+      "  \n",
+      "SELECT clin.*, (kav.alle_freq * 100) as kav_freq\n",
+      "   FROM clin\n",
+      "   LEFT JOIN public_hg19.kaviar kav\n",
+      "   ON clin.rsid = kav.id\n",
+      "   AND clin.chr = kav.chromosome\n",
+      "   AND clin.pos = kav.pos\n",
+      "   AND clin.ref = kav.ref\n",
+      "   AND clin.alt = kav.alt\n",
+      "\"\"\".format(query_args.replace(\"AND\", \"\\n AND\"))\n",
       "else:\n",
       "    print \"Did you select illumina or cgi as your platform? Please check and try again.\"\n",
+      "    \n",
       "print 'The following query was run on impala:' + '\\n' + query"
      ],
      "language": "python",
-     "prompt_number": 12
+     "prompt_number": 47
     },
     {
      "cell_type": "heading",
@@ -229,15 +225,7 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Query complete.\nThere were 77 variants found. Here's a preview:\n  chr      start       stop ref alt1 alt2 zygosity vartype alt1_qual  \\\n0   8   19813529   19813530   A    G    G      hom     snp    VQHIGH   \n1   8  143994266  143994267   A    G    G      hom     snp    VQHIGH   \n2   8  143994266  143994267   A    G    G      hom     snp    VQHIGH   \n3   8   67091182   67091183   G    T    T      hom     snp    VQHIGH   \n4   8   21976710   21976711   T    C    C      hom     snp    VQHIGH   \n\n  alt2_qual  totalreadcount  sample_id        rsid      rspos      geneinfo  \\\n0    VQHIGH              68  101-264-M       rs268   19813529      LPL:4023   \n1    VQHIGH              29  101-589-M  rs61757294  143994266  CYP11B2:1585   \n2    VQHIGH              29  101-589-M  rs61757294  143994266  CYP11B2:1585   \n3    VQHIGH              54  101-180-M  rs12721510   67091182      CRH:1392   \n4    VQHIGH              22  101-013-F   rs7014851   21976710      HR:55806   \n\n   dbsnp_build                         hgvs clin_sig  \n0           36   NC_000008.10:g.19813529A>G        5  \n1          129  NC_000008.10:g.143994266A>G        5  \n2          129  NC_000008.10:g.143994266A>G        5  \n3          127   NC_000008.10:g.67091182G>T        5  \n4          116   NC_000008.10:g.21976710T>C        5  \n\n Results saved to current working directory as clinvar_results_20150629.csv\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "#################\n",
       "# load modules  #\n",
@@ -256,84 +244,51 @@
       "#########################\n",
       "# Run Query on Impala ##\n",
       "#########################\n",
-      "print \"Running query on impala... \\n\"\n",
       "cur.execute(query)\n",
       "\n",
       "#store results as pandas data frame\n",
-      "query_df = as_pandas(cur)\n",
-      "\n",
-      "print \"Query complete.  \\n\"\n",
-      "\n",
+      "query_df = as_pandas(cur)"
+     ],
+     "language": "python",
+     "prompt_number": 48
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
       "if len(query_df) > 0: \n",
       "    print \"There were \" + str(len(query_df)) + \" variants found. Here's a preview:\"\n",
       "    print query_df.head(5)\n",
+      "    #save to csv\n",
+      "    csv_name = \"clinvar_results_\" + time.strftime(\"%Y%m%d\") + \".csv\"\n",
+      "    query_df.to_csv(csv_name, header=True, encoding='utf-8', index=False)\n",
+      "    print \"\\n Results saved to current working directory as \" + csv_name\n",
       "else: \n",
       "    print \"No results found.\""
      ],
      "language": "python",
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "heading",
-     "metadata": {},
-     "level": 3,
-     "source": [
-      "Analyzing Mode of Inheritence"
-     ]
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "'python' is not recognized as an internal or external command,\noperable program or batch file.\n"
+       ]
+      }
      ],
-     "language": "python"
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
      "input": [
-      "#save to csv\n",
-      "    csv_name = \"clinvar_results_\" + time.strftime(\"%Y%m%d\") + \".csv\"\n",
-      "    query_df.to_csv(csv_name, header=True, encoding='utf-8', index=False)\n",
-      "    print \"\\n Results saved to current working directory as \" + csv_name"
+      "!ipython nbconvert clinvar_pathogenic.ipynb"
      ],
-     "language": "python"
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "#close all the things\n",
-      "cur.close()\n",
-      "sys.exit()"
-     ],
-     "language": "python"
-    },
-    {
-     "cell_type": "heading",
-     "metadata": {},
-     "level": 2,
-     "source": [
-      "To Do"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "- clinvar needs to be re-rolled to not separate each row by comma\n",
-      "- member id added to variant tables\n",
-      "- genotype info added to illumina variants table\n",
-      "- masked zygosity column added to illumina variants table\n",
-      "- rewrite as needed for changes listed above"
-     ]
+     "language": "python",
+     "prompt_number": 4
     }
    ]
   }
