added impala query script

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -101,15 +101,7 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "{'gt': 'hom', 'subject_id': 'all', 'platform': 'illumina', 'members': 'all', 'annot_db': 'public_hg19.clinvar', 'search_db': 'p7_platform.wgs_illumina_variant'}\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "args = {\n",
       "    'platform': 'illumina',\n",
@@ -117,11 +109,12 @@
       "    'members':'all',\n",
       "    'subject_id':'all',\n",
       "    'annot_db':'public_hg19.clinvar',\n",
+      "    'genes':'HOX%,BRCA1,TRT1,SON%',\n",
       "    'gt':'hom'\n",
       "}"
      ],
      "language": "python",
-     "prompt_number": 1
+     "prompt_number": 179
     },
     {
      "cell_type": "heading",
@@ -135,26 +128,55 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
+     "outputs": [
+      {
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-190-fa78c26aa137>, line 5)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-190-fa78c26aa137>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    arg_list = {]}\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+       ]
+      }
+     ],
+     "input": [
+      "######################\n",
+      "# pull out wildcards #\n",
+      "######################\n",
+      "wildcards = {}\n",
+      "arg_list = {]}\n",
+      "\n",
+      "#separating out wildcards \n",
+      "for key, value in args.iteritems(): \n",
+      "    #if there is more than one value per arg\n",
+      "    if value != 'all' and (',' in value):\n",
+      "        #split the arg by comma\n",
+      "        value = value.replace(\"'\", \"\").split(',')\n",
+      "        #pull out any wildcards\n",
+      "        for val in value:\n",
+      "            if val.endswith('%'):\n",
+      "                wildcards.append({key, value})\n",
+      "            else:\n",
+      "                arg_list.append({key, value})\n",
+      "    #process single value per arg\n",
+      "    elif value != all and (',' not in value):\n",
+      "        if value.endswith('%'):\n",
+      "            wildcards.append({key, value})\n",
+      "        else:\n",
+      "            arg_list.append({key, value})\n",
+      "\n",
+      "\n",
+      "print wildcards"
+     ],
+     "language": "python",
+     "prompt_number": 190
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
      "outputs": [],
      "input": [
-      "##################################################\n",
-      "# read in genes of interest and mark if wildcard #\n",
-      "##################################################\n",
-      "# split gene list by comma\n",
-      "if args['genes'] != 'all':\n",
-      "    gene_args = args['genes'].replace(\"'\", \"\").split(',')\n",
-      "else: \n",
-      "    gene_args = []\n",
-      "\n",
-      "# mark any wildcards in gene list\n",
-      "wildcards = []\n",
-      "gene_list = []\n",
-      "for gene in gene_args:\n",
-      "    if gene.endswith('%'):\n",
-      "        wildcards.append(gene)\n",
-      "    elif len(gene_args) > 0:\n",
-      "        gene_list.append(gene)\n",
-      "print gene_list"
+      ""
      ],
      "language": "python"
     },
