updated impala query

--- a/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
+++ b/clinvar_pathogenic_vars/clinvar_query/clinvar_pathogenic.ipynb
@@ -37,7 +37,9 @@
      "input": [
       "#enter your user args as a comma-separated list with no spaces, or as 'all'\n",
       "#enter values that work with LIKE statement\n",
-      "args = {'sample_id':'%M,%F,%NB', \n",
+      "args = {'members':'%M,%F,%NB', \n",
+      "        'sample_id':'all',\n",
+      "        'db':'p7_platform.wgs_illumina_variants'\n",
       "        'genes': 'all', \n",
       "        'chr': 'all', \n",
       "        'gt':'1/1,0/1', # enter as 'gt' for illumina and 'zygosity' for cgi\n",
