--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -109,12 +109,12 @@
       "    'members':'all',\n",
       "    'subject_id':'all',\n",
       "    'annot_db':'public_hg19.clinvar',\n",
-      "    'genes':'HOX%,BRCA1,TRT1,SON%',\n",
+      "    'genes':'BRCA1,TRT1,SON%,HOX%',\n",
       "    'gt':'hom'\n",
       "}"
      ],
      "language": "python",
-     "prompt_number": 179
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -128,67 +128,24 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-190-fa78c26aa137>, line 5)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-190-fa78c26aa137>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    arg_list = {]}\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
+      "#assign user args to a variable\n",
+      "locals().update(args)\n",
+      "\n",
       "######################\n",
       "# pull out wildcards #\n",
       "######################\n",
-      "wildcards = {}\n",
-      "arg_list = {]}\n",
-      "\n",
       "#separating out wildcards \n",
-      "for key, value in args.iteritems(): \n",
-      "    #if there is more than one value per arg\n",
-      "    if value != 'all' and (',' in value):\n",
-      "        #split the arg by comma\n",
-      "        value = value.replace(\"'\", \"\").split(',')\n",
-      "        #pull out any wildcards\n",
-      "        for val in value:\n",
-      "            if val.endswith('%'):\n",
-      "                wildcards.append({key, value})\n",
-      "            else:\n",
-      "                arg_list.append({key, value})\n",
-      "    #process single value per arg\n",
-      "    elif value != all and (',' not in value):\n",
-      "        if value.endswith('%'):\n",
-      "            wildcards.append({key, value})\n",
-      "        else:\n",
-      "            arg_list.append({key, value})\n",
       "\n",
+      "def find_wildcards(x):\n",
+      "    if x != 'all':\n",
+      "        print x\n",
       "\n",
-      "print wildcards"
+      "find_wildcards(genes)"
      ],
      "language": "python",
-     "prompt_number": 190
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
-     ],
-     "language": "python"
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
-     ],
-     "language": "python"
+     "prompt_number": 9
     }
    ]
   }
