added function to process user arguments to query_impala

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -146,6 +146,16 @@
      ],
      "language": "python",
      "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
    ]
   }
