updated function to process user arguments to query_impala

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -114,7 +114,7 @@
       "}"
      ],
      "language": "python",
-     "prompt_number": 16
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -128,24 +128,67 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Not finished.\n"
+       ]
+      }
+     ],
      "input": [
       "#assign user args to a variable\n",
       "locals().update(args)\n",
       "\n",
-      "######################\n",
-      "# pull out wildcards #\n",
-      "######################\n",
-      "#separating out wildcards \n",
+      "############################\n",
+      "## Process user arguments ##\n",
+      "############################\n",
       "\n",
+      "#separate wildcards from args\n",
       "def find_wildcards(x):\n",
+      "    user_args = []\n",
+      "    wildcards = []\n",
       "    if x != 'all':\n",
-      "        print x\n",
+      "        #seperate user args by comma\n",
+      "        arg_list= x.replace(\"'\", \"\").split(',')\n",
+      "        for arg in arg_list:\n",
+      "            if arg.endswith('%'):\n",
+      "                wildcards.append(arg) \n",
+      "            else:\n",
+      "                user_args.append(arg)\n",
+      "    return user_args, wildcards         \n",
       "\n",
-      "find_wildcards(genes)"
+      "#function to turn wildcard and arg lists into query statements\n",
+      "def process_args(arg_list, wild_list, name_arg):\n",
+      "    # if there is more than one user argument\n",
+      "    if (len(arg_list) > 1 and len(wild_list) < 1):\n",
+      "        query_conditions = ['{0}.{1} = '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
+      "        query_args = \"AND (\" + \" OR \".join(map(str, query_conditions)) + \")\"\n",
+      "    # if there is only one user arg, it gets surrounded by quotes\n",
+      "    elif len(arg_list) == 1:\n",
+      "        query_args = ['AND' + arg_list]\n",
+      "    else:\n",
+      "        query_args = \"Not finished.\"\n",
+      "    return query_args\n",
+      "\n",
+      "\n",
+      "############################\n",
+      "## Process genes argument ##\n",
+      "############################\n",
+      "#create list of gene arguments and wildcard arguments\n",
+      "gene_list, gene_wilds = find_wildcards(genes)\n",
+      "\n",
+      "test = process_args(gene_list, gene_wilds, \"gene\")\n",
+      "print test\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ],
      "language": "python",
-     "prompt_number": 9
+     "prompt_number": 59
     },
     {
      "cell_type": "code",
