updated function to process user arguments to query_impala

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -133,7 +133,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Not finished.\n"
+        "AND p7_platform.wgs_illumina_variant.testing = 'HOXB1'\n"
        ]
       }
      ],
@@ -149,25 +149,25 @@
       "def find_wildcards(x):\n",
       "    user_args = []\n",
       "    wildcards = []\n",
-      "    if x != 'all':\n",
-      "        #seperate user args by comma\n",
-      "        arg_list= x.replace(\"'\", \"\").split(',')\n",
-      "        for arg in arg_list:\n",
-      "            if arg.endswith('%'):\n",
-      "                wildcards.append(arg) \n",
-      "            else:\n",
-      "                user_args.append(arg)\n",
+      "    #seperate user args by comma\n",
+      "    arg_list= x.replace(\"'\", \"\").split(',')\n",
+      "    for arg in arg_list:\n",
+      "        if arg.endswith('%'):\n",
+      "            wildcards.append(arg) \n",
+      "        else:\n",
+      "            user_args.append(arg)\n",
       "    return user_args, wildcards         \n",
       "\n",
       "#function to turn wildcard and arg lists into query statements\n",
       "def process_args(arg_list, wild_list, name_arg):\n",
-      "    # if there is more than one user argument\n",
+      "    # if there is more than one user argument and no wildcards\n",
       "    if (len(arg_list) > 1 and len(wild_list) < 1):\n",
       "        query_conditions = ['{0}.{1} = '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
       "        query_args = \"AND (\" + \" OR \".join(map(str, query_conditions)) + \")\"\n",
-      "    # if there is only one user arg, it gets surrounded by quotes\n",
-      "    elif len(arg_list) == 1:\n",
-      "        query_args = ['AND' + arg_list]\n",
+      "    # if there is only one user arg, and no wildcards\n",
+      "    elif (len(arg_list) == 1 and len(wild_list) < 1):\n",
+      "        single_arg = set(arg_list)\n",
+      "        query_args = 'AND {0}.{1} = '.format(search_db,name_arg) + \"'\" + \", \".join(str(e) for e in single_arg) + \"'\"\n",
       "    else:\n",
       "        query_args = \"Not finished.\"\n",
       "    return query_args\n",
@@ -177,18 +177,16 @@
       "## Process genes argument ##\n",
       "############################\n",
       "#create list of gene arguments and wildcard arguments\n",
-      "gene_list, gene_wilds = find_wildcards(genes)\n",
+      "#gene_list, gene_wilds = find_wildcards(genes)\n",
       "\n",
-      "test = process_args(gene_list, gene_wilds, \"gene\")\n",
-      "print test\n",
+      "test_args = ['HOXB1']\n",
+      "test_wilds = []\n",
       "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "test = process_args(test_args, test_wilds, \"testing\")\n",
+      "print test"
      ],
      "language": "python",
-     "prompt_number": 59
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
