updated function to process user arguments to query_impala

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -133,7 +133,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "AND p7_platform.wgs_illumina_variant.testing = 'HOXB1'\n"
+        "\n"
        ]
       }
      ],
@@ -158,45 +158,31 @@
       "            user_args.append(arg)\n",
       "    return user_args, wildcards         \n",
       "\n",
-      "#function to turn wildcard and arg lists into query statements\n",
-      "def process_args(arg_list, wild_list, name_arg):\n",
-      "    # if there is more than one user argument and no wildcards\n",
-      "    if (len(arg_list) > 1 and len(wild_list) < 1):\n",
-      "        query_conditions = ['{0}.{1} = '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
-      "        query_args = \"AND (\" + \" OR \".join(map(str, query_conditions)) + \")\"\n",
-      "    # if there is only one user arg, and no wildcards\n",
-      "    elif (len(arg_list) == 1 and len(wild_list) < 1):\n",
-      "        single_arg = set(arg_list)\n",
-      "        query_args = 'AND {0}.{1} = '.format(search_db,name_arg) + \"'\" + \", \".join(str(e) for e in single_arg) + \"'\"\n",
-      "    else:\n",
-      "        query_args = \"Not finished.\"\n",
-      "    return query_args\n",
+      "#function to turn user args into query statements\n",
+      "def process_args(arg_list, name_arg):\n",
+      "    # if there is more than one user argument\n",
+      "    if len(arg_list) > 1:\n",
+      "        print arg_list\n",
+      "    #     query_conditions = ['{0}.{1} = '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
+      "    #     reg_args = \"AND (\" + \" OR \".join(map(str, query_conditions)) + \")\"\n",
+      "    # # if there is only one user arg, and no wildcards\n",
+      "    # elif len(arg_list) == 1:\n",
+      "    #     single_arg = set(arg_list)\n",
+      "    #     reg_args = 'AND {0}.{1} = '.format(search_db,name_arg) + \"'\" + \", \".join(str(e) for e in single_arg) + \"'\"\n",
+      "    # else: \n",
+      "    #     reg_args = []\n",
+      "    #     return reg_args\n",
+      " \n",
+      " \n",
+      "test_args = ['TRT1']\n",
       "\n",
+      "testing = process_args(test_args, \"testing\")       \n",
+      "print       \n",
       "\n",
-      "############################\n",
-      "## Process genes argument ##\n",
-      "############################\n",
-      "#create list of gene arguments and wildcard arguments\n",
-      "#gene_list, gene_wilds = find_wildcards(genes)\n",
-      "\n",
-      "test_args = ['HOXB1']\n",
-      "test_wilds = []\n",
-      "\n",
-      "test = process_args(test_args, test_wilds, \"testing\")\n",
-      "print test"
+      "\n"
      ],
      "language": "python",
-     "prompt_number": 75
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      ""
-     ],
-     "language": "python"
+     "prompt_number": 116
     }
    ]
   }
