updated function to process user arguments to query_impala

--- a/query_impala..ipynb
+++ b/query_impala..ipynb
@@ -133,7 +133,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n"
+        "AND (p7_platform.wgs_illumina_variant.testing = 'TRT1' OR p7_platform.wgs_illumina_variant.testing = 'HOXB1')\n"
        ]
       }
      ],
@@ -160,29 +160,27 @@
       "\n",
       "#function to turn user args into query statements\n",
       "def process_args(arg_list, name_arg):\n",
-      "    # if there is more than one user argument\n",
+      "    # if there is only one user arg\n",
+      "    if len(arg_list) == 1:\n",
+      "        reg_args=  'AND {0}.{1} = '.format(search_db,name_arg) + \"'\" + \", \".join(str(e) for e in arg_list) + \"'\"\n",
+      "    #if there are more than on user arguments\n",
       "    if len(arg_list) > 1:\n",
-      "        print arg_list\n",
-      "    #     query_conditions = ['{0}.{1} = '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
-      "    #     reg_args = \"AND (\" + \" OR \".join(map(str, query_conditions)) + \")\"\n",
-      "    # # if there is only one user arg, and no wildcards\n",
-      "    # elif len(arg_list) == 1:\n",
-      "    #     single_arg = set(arg_list)\n",
-      "    #     reg_args = 'AND {0}.{1} = '.format(search_db,name_arg) + \"'\" + \", \".join(str(e) for e in single_arg) + \"'\"\n",
-      "    # else: \n",
-      "    #     reg_args = []\n",
-      "    #     return reg_args\n",
-      " \n",
-      " \n",
-      "test_args = ['TRT1']\n",
+      "        conditions = ['{0}.{1} = '.format(search_db,name_arg) + \"'\" + s + \"'\" for s in arg_list]\n",
+      "        reg_args = \"AND (\" + \" OR \".join(map(str, conditions)) + \")\"\n",
+      "    return reg_args\n",
       "\n",
-      "testing = process_args(test_args, \"testing\")       \n",
-      "print       \n",
+      " \n",
+      "test_args = ['TRT1','HOXB1']\n",
       "\n",
-      "\n"
+      "testing = process_args(test_args, \"testing\")\n",
+      "\n",
+      "print testing\n",
+      "\n",
+      "\n",
+      "#placeholder"
      ],
      "language": "python",
-     "prompt_number": 116
+     "prompt_number": 146
     }
    ]
   }
